--- a/.eslintrc
+++ b/.eslintrc
@@ -6,10 +6,20 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "ecmaVersion": 2020,
     "sourceType": "module"
   },
-  "extends": ["plugin:@typescript-eslint/recommended", "prettier"],
-  "plugins": ["import", "prettier"],
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+     "plugin:prettier/recommended",
+      "prettier",
+      "prettier/@typescript-eslint"
+    ],
+  "plugins": [
+     "@typescript-eslint",
+     "prettier",
+    "import"
+  ],
   "rules": {
     "@typescript-eslint/no-this-alias": [
       "error",
