--- a/package.json
+++ b/package.json
@@ -7,46 +7,45 @@
   "author": "raminjafary <raminjafary1993@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack serve --mode development",
-    "build": "NODE_ENV=production webpack",
+    "dev": "NODE_ENV=development webpack serve --mode development --entry ./tests/fixtures/index.ts",
+    "build": "NODE_ENV=production webpack --mode production --entry ./src/index.ts",
     "test": "jest --verbose --coverage",
-    "test-debug": "node --inspect-brk ./node-modules/jest/bin/jest.js --runInBand --watch",
-    "test:watch": "jest --watch",
-    "lint": "./node_modules/.bin/eslint --ext .ts --ignore-path .gitignore .",
+    "lint": "eslint --ext .ts --ignore-path .gitignore .",
     "lint:fix": "yarn lint --fix",
-    "setup": "yarn install && yarn lint && jest && yarn build"
+    "setup": "yarn install && yarn lint:fix && jest && yarn build",
+    "release": "standard-version $* && git push --follow-tags && npm publish"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
-    "@babel/preset-env": "7.12.10",
+    "@babel/preset-env": "7.12.11",
     "@babel/preset-typescript": "7.12.7",
-    "@types/compression-webpack-plugin": "6.0.1",
+    "@types/compression-webpack-plugin": "6.0.4",
     "@types/html-webpack-plugin": "3.2.4",
-    "@types/jest": "26.0.18",
-    "@types/node": "14.14.12",
-    "@types/webpack": "4.41.25",
-    "@typescript-eslint/eslint-plugin": "4.9.1",
-    "@typescript-eslint/parser": "4.9.1",
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.22",
+    "@types/webpack": "4.41.26",
+    "@typescript-eslint/eslint-plugin": "4.14.0",
+    "@typescript-eslint/parser": "4.14.0",
     "babel-jest": "26.6.3",
     "babel-loader": "8.2.2",
-    "compression-webpack-plugin": "7.0.0",
-    "eslint": "7.15.0",
-    "eslint-config-prettier": "7.0.0",
+    "compression-webpack-plugin": "7.1.2",
+    "eslint": "7.18.0",
+    "eslint-config-prettier": "7.2.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-prettier": "3.2.0",
-    "html-webpack-plugin": "4.5.0",
-    "husky": "4.3.5",
-    "identity-obj-proxy": "3.0.0",
+    "eslint-plugin-prettier": "3.3.1",
+    "html-webpack-plugin": "4.5.1",
+    "husky": "4.3.8",
     "jest": "26.6.3",
     "lint-staged": "10.5.3",
     "prettier": "2.2.1",
+    "standard-version": "^9.1.0",
     "ts-jest": "26.4.4",
-    "ts-loader": "8.0.11",
-    "ts-node": "9.1.1",
-    "typescript": "4.1.2",
-    "webpack": "5.10.0",
-    "webpack-cli": "4.2.0",
-    "webpack-dev-server": "3.11.0"
+    "ts-loader": "8.0.14",
+    "ts-node": "^9.1.1",
+    "typescript": "4.1.3",
+    "webpack": "5.16.0",
+    "webpack-cli": "4.4.0",
+    "webpack-dev-server": "3.11.2"
   },
   "keywords": [
     "inline-worker",
