--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "workerman",
+  "name": "@raminjafary/workerman",
   "version": "0.1.0",
-  "description": "Spawn inline web worker",
-  "main": "src/index.js",
-  "repository": "git@github.com:raminjafary/workerman.git",
+  "description": "Run your JavaScript off the browser's main thread with inline workers",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "author": "raminjafary <raminjafary1993@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:raminjafary/workerman.git"
+  },
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "NODE_ENV=development webpack serve --mode development --entry ./tests/fixtures/index.ts",
     "build": "NODE_ENV=production webpack --mode production --entry ./src/index.ts",
@@ -46,6 +53,9 @@
     "webpack": "5.16.0",
     "webpack-cli": "4.4.0",
     "webpack-dev-server": "3.11.2"
+  },
+  "publishConfig": {
+  "access": "public"
   },
   "keywords": [
     "inline-worker",
