chore: change file names

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "noEmitHelpers": false,
     "typeRoots": ["./node_modules/@types", "./types"]
   },
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
