--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@raminjafary/workerman",
   "version": "0.1.0",
   "description": "Run your JavaScript off the browser's main thread with inline workers",
-  "main": "dist/main.min.js",
+  "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "author": "raminjafary <raminjafary1993@gmail.com>",
   "repository": {
@@ -14,9 +14,9 @@
     "dist"
   ],
   "scripts": {
-    "dev": "NODE_ENV=development webpack serve --mode development --entry ./tests/fixtures/index.ts",
-    "build": "yarn clean && NODE_ENV=production webpack --mode production --entry ./src/index.ts",
     "clean": "rm -rf dist",
+    "dev": "npx serve ./tests/fixtures",
+    "build": "yarn clean && tsc",
     "test": "jest --verbose --coverage",
     "lint": "eslint --ext .ts --ignore-path .gitignore .",
     "lint:fix": "yarn lint --fix",
@@ -24,24 +24,14 @@
     "release": "standard-version $* && git push --follow-tags && npm publish"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/preset-env": "7.12.11",
-    "@babel/preset-typescript": "7.12.7",
-    "@types/compression-webpack-plugin": "6.0.4",
-    "@types/html-webpack-plugin": "3.2.4",
     "@types/jest": "26.0.20",
     "@types/node": "14.14.22",
-    "@types/webpack": "4.41.26",
     "@typescript-eslint/eslint-plugin": "4.14.0",
     "@typescript-eslint/parser": "4.14.0",
-    "babel-jest": "26.6.3",
-    "babel-loader": "8.2.2",
-    "compression-webpack-plugin": "7.1.2",
     "eslint": "7.18.0",
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.3.1",
-    "html-webpack-plugin": "4.5.1",
     "husky": "4.3.8",
     "jest": "26.6.3",
     "lint-staged": "10.5.3",
@@ -50,13 +40,11 @@
     "ts-jest": "26.4.4",
     "ts-loader": "8.0.14",
     "ts-node": "9.1.1",
-    "typescript": "4.1.3",
-    "webpack": "5.17.0",
-    "webpack-cli": "4.4.0",
-    "webpack-dev-server": "3.11.2"
+    "tsc": "^1.20150623.0",
+    "typescript": "4.1.3"
   },
   "publishConfig": {
-  "access": "public"
+    "access": "public"
   },
   "keywords": [
     "inline-worker",
