--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "clean": "rm -rf dist",
-    "dev": "npx serve ./tests/fixtures",
+    "dev": "npx serve",
     "build": "yarn clean && tsc",
     "test": "jest --verbose --coverage",
     "lint": "eslint --ext .ts --ignore-path .gitignore .",
@@ -25,23 +25,23 @@
   },
   "devDependencies": {
     "@types/jest": "26.0.20",
-    "@types/node": "14.14.22",
-    "@typescript-eslint/eslint-plugin": "4.14.0",
-    "@typescript-eslint/parser": "4.14.0",
-    "eslint": "7.18.0",
-    "eslint-config-prettier": "7.2.0",
+    "@types/node": "14.14.31",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
+    "eslint": "7.21.0",
+    "eslint-config-prettier": "8.1.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "3.3.1",
-    "husky": "4.3.8",
+    "husky": "5.1.3",
     "jest": "26.6.3",
-    "lint-staged": "10.5.3",
+    "lint-staged": "10.5.4",
     "prettier": "2.2.1",
-    "standard-version": "9.1.0",
-    "ts-jest": "26.4.4",
-    "ts-loader": "8.0.14",
+    "standard-version": "9.1.1",
+    "ts-jest": "26.5.2",
+    "ts-loader": "8.0.17",
     "ts-node": "9.1.1",
     "tsc": "^1.20150623.0",
-    "typescript": "4.1.3"
+    "typescript": "4.2.2"
   },
   "publishConfig": {
     "access": "public"
