--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "clean": "rm -rf dist",
-    "dev": "npx serve",
+    "dev": "npx live-server --open=tests/fixtures",
     "build": "yarn clean && tsc",
     "test": "jest --verbose --coverage",
     "lint": "eslint --ext .ts --ignore-path .gitignore .",
@@ -24,24 +24,24 @@
     "release": "standard-version $* && git push --follow-tags && npm publish"
   },
   "devDependencies": {
-    "@types/jest": "26.0.20",
-    "@types/node": "14.14.31",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "7.21.0",
-    "eslint-config-prettier": "8.1.0",
+    "@types/jest": "26.0.22",
+    "@types/node": "14.14.41",
+    "@typescript-eslint/eslint-plugin": "4.22.0",
+    "@typescript-eslint/parser": "4.22.0",
+    "eslint": "7.24.0",
+    "eslint-config-prettier": "8.2.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-prettier": "3.3.1",
-    "husky": "5.1.3",
+    "eslint-plugin-prettier": "3.4.0",
+    "husky": "6.0.0",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
     "prettier": "2.2.1",
-    "standard-version": "9.1.1",
-    "ts-jest": "26.5.2",
-    "ts-loader": "8.0.17",
+    "standard-version": "9.2.0",
+    "ts-jest": "26.5.5",
+    "ts-loader": "8.1.0",
     "ts-node": "9.1.1",
     "tsc": "^1.20150623.0",
-    "typescript": "4.2.2"
+    "typescript": "4.2.4"
   },
   "publishConfig": {
     "access": "public"
