--- a/package.json
+++ b/package.json
@@ -24,24 +24,24 @@
     "release": "standard-version $* && git push --follow-tags && npm publish"
   },
   "devDependencies": {
-    "@types/jest": "26.0.22",
-    "@types/node": "14.14.41",
-    "@typescript-eslint/eslint-plugin": "4.22.0",
-    "@typescript-eslint/parser": "4.22.0",
-    "eslint": "7.24.0",
-    "eslint-config-prettier": "8.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-prettier": "3.4.0",
-    "husky": "6.0.0",
-    "jest": "26.6.3",
-    "lint-staged": "10.5.4",
-    "prettier": "2.2.1",
-    "standard-version": "9.2.0",
-    "ts-jest": "26.5.5",
-    "ts-loader": "8.1.0",
-    "ts-node": "9.1.1",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.41",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "standard-version": "^9.2.0",
+    "ts-jest": "^26.5.5",
+    "ts-loader": "^8.1.0",
+    "ts-node": "^9.1.1",
     "tsc": "^1.20150623.0",
-    "typescript": "4.2.4"
+    "typescript": "^4.2.4"
   },
   "publishConfig": {
     "access": "public"
@@ -53,17 +53,11 @@
     "web workers"
   ],
   "browserslist": "> 0.25%, not dead",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && yarn build"
-    }
-  },
   "lint-staged": {
     "**/*.{ts, js}": [
       "prettier --write",
       "eslint --fix",
-      "jest --findRelatedTests",
-      "git add"
+      "jest --findRelatedTests"
     ]
   }
 }
