--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "clean": "rm -rf dist",
-    "dev": "npx live-server --open=tests/fixtures",
+    "dev": "yarn build && npx live-server --open=tests/fixtures",
     "build": "yarn clean && tsc",
     "test": "jest --verbose --coverage",
     "lint": "eslint --ext .ts --ignore-path .gitignore .",
@@ -24,24 +24,24 @@
     "release": "standard-version $* && git push --follow-tags && npm publish"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.9.1",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.3",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.2",
-    "jest": "^27.2.0",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.4.0",
-    "standard-version": "^9.3.1",
-    "ts-jest": "^27.0.5",
-    "ts-loader": "^9.2.5",
-    "ts-node": "^10.2.1",
+    "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "lint-staged": "^11.2.3",
+    "prettier": "^2.4.1",
+    "standard-version": "^9.3.2",
+    "ts-jest": "^27.0.7",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.3.1",
     "tsc": "^2.0.3",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "publishConfig": {
     "access": "public"
